--- a/styles/styles.css
+++ b/styles/styles.css
@@ -211,6 +211,7 @@ section {
   grid-template-columns: repeat(2, 1fr);
   padding-top: 3.5rem;
   padding-bottom: 5rem;
+  font-size: small;
 }
 .about-container .right-about {
   display: grid;
