Change photo and update info

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,8 +23,8 @@
 
 .light-mode {
   --color-primary: #FFFFFF;
-  --color-secondary: #F56692;
-  --color-white: #454e56;
+  --color-secondary: #2729ae;
+  --color-white: #4c5645;
   --color-black: #000;
   --color-grey0: #f8f8f8;
   --color-grey-1: #6c7983;
